@@ -1,0 +1,63 @@
+<!-- ###FULLDOC### begin -->
+<div class="typo3-fullDoc">
+	<!-- Page header with buttons, path details and csh -->
+	<div id="typo3-docheader">
+		<div id="typo3-docheader-row1">
+			<div class="buttonsleft">###BUTTONLIST_LEFT###</div>
+		<div class="buttonsright">###BUTTONLIST_RIGHT###</div>
+		</div>
+	</div>
+	<!-- Content of module, for instance listing, info or editing -->
+	###EDITAREA###
+</div>
+<!-- ###FULLDOC### end -->
+
+<!-- Sidebar Disabled -->
+<!-- ###SIDEBAR_DISABLED### -->
+	<div id="typo3-docbody" style="top:22px">
+		<div id="typo3-inner-docbody">
+			###CONTENT###
+		</div>
+	</div>
+<!-- ###SIDEBAR_DISABLED### -->
+
+<!-- Sidebar TopTabs and TopRows -->
+<!-- ###SIDEBAR_TOP### -->
+	<div id="typo3-docbody" style="top:22px">
+		<div id="typo3-docheader-row2" style="height:auto;padding-top:1px">
+			<div class="docheader-row2-inner" style="margin-left:10px;margin-right:10px;width:auto">###TABROW###</div>
+		</div>
+		<div id="typo3-inner-docbody">
+			###CONTENT###
+		</div>
+	</div>
+<!-- ###SIDEBAR_TOP### -->
+
+<!-- Sidebar Left -->
+<!-- ###SIDEBAR_LEFT### -->
+	<div id="typo3-docbody" style="top:22px">
+		<div id="typo3-inner-docbody">
+			<table cellspacing="0" cellpadding="0" style="width:100%; height:550px; padding:0; margin:0;">
+				<tr>
+					<td style="vertical-align:top;">###TABROW###</td>
+					<td style="vertical-align:top; padding-bottom:20px;" width="99%">###CONTENT###</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+<!-- ###SIDEBAR_LEFT### -->
+
+<!-- Grouping the icons on top -->
+
+<!-- ###BUTTON_GROUP_WRAP### -->
+	<div class="buttongroup">###BUTTONS###</div>
+<!-- ###BUTTON_GROUP_WRAP### -->
+
+<!-- ###BUTTON_GROUPS_LEFT### -->
+<!-- ###BUTTON_GROUP1### -->###CSH######NEW_PAGE###<!-- ###BUTTON_GROUP1### -->
+<!-- ###BUTTON_GROUP2### -->###VIEW######EDIT_PAGE######MOVE_PAGE######HISTORY_PAGE###<!-- ###BUTTON_GROUP2### -->
+<!-- ###BUTTON_GROUPS_LEFT### -->
+
+<!-- ###BUTTON_GROUPS_RIGHT### -->
+<!-- ###BUTTON_GROUP1### -->###RECORD_LIST######SHORTCUT###<!-- ###BUTTON_GROUP1### -->
+<!-- ###BUTTON_GROUPS_RIGHT### -->
